--- a/src/main/resources/templates/minesweeper.html
+++ b/src/main/resources/templates/minesweeper.html
@@ -18,6 +18,9 @@
 					<h1>Gamestudio</h1>
 					<hr>
 					<h2>Minesweeper</h2>
+					<h3>
+						<a href="/minesweeper">New game</a>
+					</h3>
 				</header>
 			</div>
 		</div>
