--- a/src/main/resources/static/css/guessthenumber.css
+++ b/src/main/resources/static/css/guessthenumber.css
@@ -32,7 +32,15 @@ textarea {
 }
 
 .comment-username {
-	max-width: 100%;
+	float: left;
+	max-width: 50%;
+	padding-left: 1em;
+	padding-bottom: 1.5em;
+}
+
+.comment-time {
+	float: left;
+	max-width: 50%;
 	padding-bottom: 1.5em;
 }
 
