--- a/src/main/resources/static/css/puzzle.css
+++ b/src/main/resources/static/css/puzzle.css
@@ -48,7 +48,16 @@ textarea {
 }
 
 .comment-username {
-	max-width: 100%;
+	float: left;
+	max-width: 50%;
+	padding-left: 1em;
+	padding-bottom: 1.5em;
+}
+
+.comment-time {
+	float: left;
+	max-width: 50%;
+	padding-bottom: 1.5em;
 }
 
 #comments-heading {
