--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -91,8 +91,8 @@
 	<div th:fragment="comments (game)">
 		<div th:if="${@mainController.logged}">
 			<form action="/addcomment" method="post">
-				<input type="hidden" name="game" th:value="${game}" /> <label>Add
-					comment (255 chars max):<textarea name="content" rows="3" cols="33"></textarea>
+				<input type="hidden" name="game" th:value="${game}" /> <label id="add-comment">Add a 
+					comment (255 chars max):<textarea name="content" rows="3" cols="29"></textarea>
 				</label>
 				<button type=submit class="btn btn-primary">Submit</button>
 			</form>
